--- a/conditional.Rmd
+++ b/conditional.Rmd
@@ -2,10 +2,49 @@
 
 ## Motivating Example {-}
 
-Boy or Girl Paradox
+You know that your coworker has two children. Absent any other information, the probability that 
+both are boys is $P(\text{both boys}) = \frac{1}{4}$.
+
+One day, she mentions to you, "I need to stop by St. Joseph's after work for a PTA meeting." 
+St. Joseph's is a local all-boys school. So now you know that at least one of her children is a boy. 
+What is the probability now that both her children are boys?
 
 ## Theory {-}
 
-## Worked Examples {-}
+To quantify how probabilities change in light of new information, we calculate the **conditional probability**.
 
-## Exercises {-}
+$$ P(\text{both boys}\ |\ \text{at least one boy}) $$
+
+The $|$ symbol is read "given" and the event after the $|$ symbol represents information that we know. 
+
+In general, to calculate a conditional probability, we use the following formula.
+
+```{definition, name="Conditional Probability"}
+$$ P(B | A) = \frac{P(A \text{ and } B)}{P(A)}. $$
+```
+
+The probability $P(A \text{ and } B)$ is called the **joint probability** of the two events $A$ and $B$.
+
+So the conditional probability above is 
+
+$$ P(\text{both boys}\ |\ \text{at least one boy}) = \frac{P(\text{both boys} \text{ and } \text{at least one boy})}{P(\text{at least one boy})} = \frac{P(\text{both boys})}{P(\text{at least one boy})} = \frac{1/4}{3/4} = \frac{1}{3}. $$
+
+In the above example, the joint probability $P(\text{both boys} \text{ and } \text{at least one boy})$ is easy to calculate because the two events are redundant. If we know that both are boys, then we automatically know that at least one is a boy.
+
+The information that at least one of her children attends St. Joseph's (and, thus, is a boy) increases the probability that she has two boys from $1/4$ to $1/3$.
+
+## Examples {-}
+
+1. You and your friend Amy are each dealt two cards: hers face up and yours face down. 
+In which of the following scenarios are you more likely to have a pair:
+    - when she has a pair of queens
+    - when she has a queen and a 5?
+
+2. Dr. No has captured James Bond and forces him to play a game of Russian roulette. (Note: Russian roulette is very different from the casino game roulette!) Dr. No shows him an revolver with 6 empty chambers and places 2 bullets into adjacent chambers. He makes Bond spin the cylinder, place the muzzle against his head, and pull the trigger. He survives! Luckily for Bond, the cylinder stopped on one of the empty chambers.
+
+    Now Dr. No gives Bond two options: he can re-spin the cylinder before firing again or he can fire with the gun in its current state. (Keep in mind that the cylinder rotates to the next chamber each time the gun is fired.) What option should Bond choose to maximize his chance of surviving?
+
+    a. Clearly write out the conditional probability of interest using $P(B|A)$ notation.
+    b. Find the probability. (**Hint:** You should not need to do any calculations. You should be able to find the probability just by thinking carefully about the information you have. Make sure you explain your reasoning carefully.)
+
+## Additional Exercises {-}
