--- a/independence.Rmd
+++ b/independence.Rmd
@@ -13,34 +13,38 @@ We want to know the probability that the ball will land in a
 red pocket on the 5th spin, _given_ that it did not land in a
 red pocket on any of the first 4 spins:
 $$ P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}). $$
-First, let's simulate this (conditional) probability:
-```{r}
-# define the 38 possible outcomes on a roulette wheel
-# (18 red spaces, 18 black spaces, 0, and 00)
-roulette_wheel <- c(rep("red", 18), rep("black", 18), "0", "00")
+<!-- First, let's simulate this (conditional) probability: -->
+<!-- ```{r} -->
+<!-- # define the 38 possible outcomes on a roulette wheel -->
+<!-- # (18 red spaces, 18 black spaces, 0, and 00) -->
+<!-- roulette_wheel <- c(rep("red", 18), rep("black", 18), "0", "00") -->
 
-sims <- c() # initialize vector for storing the simulation outcomes
+<!-- sims <- c() # initialize vector for storing the simulation outcomes -->
 
-# repeat 100000 times
-for (i in 1:100000) {
-  # simulate 5 spins
-  spins <- sample(roulette_wheel, size=5, replace=TRUE)
-  
-  # restrict to simulations where the first 4 spins were all not red
-  if (all(spins[1:4] != "red")) {
-    sims <- c(sims, spins[5]) # add outcome of 5th spin to simulation results
-  }
-}
+<!-- # repeat 100000 times -->
+<!-- for (i in 1:100000) { -->
+<!--   # simulate 5 spins -->
+<!--   spins <- sample(roulette_wheel, size=5, replace=TRUE) -->
 
-# tabulate the simulation results
-results <- table(sims)
-results
-```
+<!--   # restrict to simulations where the first 4 spins were all not red -->
+<!--   if (all(spins[1:4] != "red")) { -->
+<!--     sims <- c(sims, spins[5]) # add outcome of 5th spin to simulation results -->
+<!--   } -->
+<!-- } -->
 
-The simulated probability is 
-$`r results["red"]` / `r length(sims)` \approx `r round(results["red"] / length(sims), 3)`$, which 
-does not seem different from the overall probability of a ball landing in a red pocket, 
-$18 / 38 \approx 0.474$. To verify that the two probabilities are _exactly_ the same, we have to 
+<!-- # tabulate the simulation results -->
+<!-- results <- table(sims) -->
+<!-- results -->
+<!-- ``` -->
+
+<!-- The simulated probability is  -->
+<!-- $`r results["red"]` / `r length(sims)` \approx `r round(results["red"] / length(sims), 3)`$, which  -->
+<!-- does not seem different from the overall probability of a ball landing in a red pocket,  -->
+<!-- $18 / 38 \approx 0.474$. -->
+
+## Theory {-}
+
+To verify that the two probabilities are _exactly_ the same, we 
 do the calculation:
 
 \begin{align*}
@@ -60,10 +64,8 @@ events are **independent**. In this case, whether the gambler wins on the 5th sp
 independent of the fact that he has lost each of the last 4 spins. The folk belief that one is 
 "due" for a win after a series of losses is plain wrong and is known as the **gambler's fallacy**.
 
-## Theory {-}
-
 ```{definition}
-Two events $A$ and $B$ are said to be **independent** if 
+Two events $A$ and $B$ are said to be **independent** if the 
 \begin{equation}
 P(B | A) = P(B).
 (\#eq:independence)
@@ -92,7 +94,7 @@ P(B | A) &= \frac{P(A \cap B)}{P(A)} & \text{by the definition of conditional pr
 \end{align*}
 ```
 
-## Worked Examples {-}
+## Examples {-}
 
 1. One card is dealt off the top of a well-shuffled deck of cards. Is the event that the card is a 
 heart independent of the event that the card is an ace?
@@ -101,4 +103,4 @@ first card is a heart independent of the event that the second card is a heart?
 3. In the dice game Yahtzee, five dice are rolled. The outcomes of the five dice are independent. 
 What is the probability of rolling a "Yahtzee" (i.e., when all five dice show the same number)?
 
-## Exercises {-}
+## Additional Exercises {-}
