--- a/conditional.Rmd
+++ b/conditional.Rmd
@@ -27,7 +27,12 @@ The probability $P(A \text{ and } B)$ is called the **joint probability** of the
 
 So the conditional probability above is 
 
-$$ P(\text{both boys}\ |\ \text{at least one boy}) = \frac{P(\text{both boys} \text{ and } \text{at least one boy})}{P(\text{at least one boy})} = \frac{P(\text{both boys})}{P(\text{at least one boy})} = \frac{1/4}{3/4} = \frac{1}{3}. $$
+\begin{align*}
+ P(\text{both boys}\ |\ \text{at least one boy}) &= \frac{P(\text{both boys} \text{ and } \text{at least one boy})}{P(\text{at least one boy})} \\ 
+ &= \frac{P(\text{both boys})}{P(\text{at least one boy})} \\
+ &= \frac{1/4}{3/4} \\
+ &= \frac{1}{3}. 
+ \end{align*}
 
 In the above example, the joint probability $P(\text{both boys} \text{ and } \text{at least one boy})$ is easy to calculate because the two events are redundant. If we know that both are boys, then we automatically know that at least one is a boy.
 
