--- a/conditional.Rmd
+++ b/conditional.Rmd
@@ -23,28 +23,63 @@ The $|$ symbol is read "given" and the event after the $|$ symbol represents inf
 
 In general, to calculate a conditional probability, we use the following formula.
 
-```{definition, name="Conditional Probability"}
-$$ P(B | A) = \frac{P(A \text{ and } B)}{P(A)}. $$
+```{definition conditional, name="Conditional Probability"}
+$$ P(B | A) = \frac{P(A \textbf{ and } B)}{P(A)}. $$
 ```
 
-The probability $P(A \text{ and } B)$ is called the **joint probability** of the two events $A$ and $B$.
+The probability $P(A \textbf{ and } B)$ is called the **joint probability** of the two events $A$ and $B$.
 
 So the conditional probability above is 
 
 \begin{align*}
- P(\text{both boys}\ |\ \text{at least one boy}) &= \frac{P(\text{both boys} \text{ and } \text{at least one boy})}{P(\text{at least one boy})} \\ 
+ P(\text{both boys}\ |\ \text{at least one boy}) &= \frac{P(\text{both boys} \textbf{ and } \text{at least one boy})}{P(\text{at least one boy})} \\ 
  &= \frac{P(\text{both boys})}{P(\text{at least one boy})} \\
  &= \frac{1/4}{3/4} \\
  &= \frac{1}{3}. 
  \end{align*}
 
-In the above example, the joint probability $P(\text{both boys} \text{ and } \text{at least one boy})$ is easy to calculate because the two events are redundant. If we know that both are boys, then we automatically know that at least one is a boy.
+In the above example, the joint probability $P(\text{both boys} \textbf{ and } \text{at least one boy})$ is easy to calculate because the two events are redundant. If we know that both are boys, then we automatically know that at least one is a boy.
 
 The information that at least one of her children attends St. Joseph's (and, thus, is a boy) increases the probability that she has two boys from $1/4$ to $1/3$.
 
 If this result was counterintuitive to you, the video below gives some intuition.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/T-w-e7RNdgY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/T-w-e7RNdgY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br/>
+
+We can rearrange the conditional probability formula to get a formula that is useful for calculating the joint probability 
+when the conditional probability is known.
+```{theorem multiplication-rule, name="Multiplication Rule"}
+$$ P(A \textbf{ and } B) = P(A) \cdot P(B | A). $$
+```
+
+```{example}
+Two cards are dealt off the top of a shuffled deck of cards. What is the probability that both are queens?
+```
+```{solution}
+In this case, we want to calculate the joint probability 
+\[ P(\text{1st card is Q} \textbf{ and } \text{2nd card is Q}), \] 
+and the conditional probability 
+\[ P(\text{2nd card is Q} | \text{1st card is Q}) \] 
+is simple. If it is known that 
+the 1st card was a queen, then there are only 51 cards remaining in the deck, of which 3 are queens, so 
+\[  P(\text{2nd card is Q} | \text{1st card is Q}) = \frac{3}{51}. \]
+
+By the Multiplication Rule (\@ref(thm:multiplication-rule)),
+\begin{align*}
+P(\text{1st card is Q} \textbf{ and } \text{2nd card is Q}) &= P(\text{1st card is Q}) \cdot P(\text{2nd card is Q} | \text{1st card is Q}) \\
+&= \frac{4}{52} \cdot \frac{3}{51} 
+\end{align*}
+
+Let's compare this with a solution based on counting the outcomes directly. There are $52 \cdot 51$ equally likely (ordered) outcomes, 
+of which $4 \cdot 3$ are both queens. Therefore, the probability is 
+\[ P(\text{1st card is queen} \textbf{ and } \text{2nd card is queen}) = \frac{4 \cdot 3}{52 \cdot 51}. \]
+We get the same answer; the only thing that changes is the order of operations:
+
+- In counting, we first multiply to get the number of outcomes, then divide to get probabilities. 
+- In the multiplication rule, we first divide to get probabilities, then multiply the probabilities.
+```
+
 
 ## Examples {-}
 
