--- a/independence.Rmd
+++ b/independence.Rmd
@@ -48,7 +48,7 @@ To verify that the two probabilities are _exactly_ the same, we
 do the calculation:
 
 \begin{align*}
-P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}) &= \frac{P(\text{not red on first 4 spins and red on 5th spin}) }{P(\text{not red on first 4 spins})} \\
+P(\text{red on 5th spin}\ |\ \text{not red on first 4 spins}) &= \frac{P(\text{not red on first 4 spins} \textbf{ and } \text{red on 5th spin}) }{P(\text{not red on first 4 spins})} \\
 &= \frac{ 20^4 \cdot 18 \big/ 38^5 }{20^4 \big/ 38^4} \\
 &= \frac{18}{38}.
 \end{align*}
@@ -72,23 +72,25 @@ P(B | A) = P(B).
 \end{equation}
 ```
 
+The next result follows by applying the Multiplication Rule (\@ref(thm:multiplication-rule)) to 
+the definition of independence.
 ```{theorem}
 Two events $A$ and $B$ are independent if and only if their probabilities multiply:
 \begin{equation}
-P(A \text{ and } B) = P(A) P(B).
+P(A \textbf{ and } B) = P(A) P(B).
 (\#eq:independence-mult)
 \end{equation}
 ```
 ```{proof}
 First, we assume \@ref(eq:independence) and show that \@ref(eq:independence-mult) holds:
 \begin{align*}
-P(A \text{ and } B) &= P(A) P(B | A) & \text{by the Multiplication Rule} \\
+P(A \textbf{ and } B) &= P(A) P(B | A) & \text{by the Multiplication Rule} \\
 &= P(A) P(B) & \text{by assumption}.
 \end{align*}
 
 Conversely, we assume \@ref(eq:independence-mult) and show that \@ref(eq:independence) holds:
 \begin{align*}
-P(B | A) &= \frac{P(A \text{ and } B)}{P(A)} & \text{by the definition of conditional probability}  \\
+P(B | A) &= \frac{P(A \textbf{ and } B)}{P(A)} & \text{by the definition of conditional probability}  \\
 &= \frac{P(A) P(B)}{P(A)} & \text{by assumption} \\
 &= P(B).
 \end{align*}
@@ -107,7 +109,7 @@ Would you rather be Player 1 or Player 2?
 Player 2 has a $20/36 = 0.5556$ chance of winning. Here's why:
 \begin{align*} 
 P(\text{biggest number is 5, 6}) &= 1 - P(\text{biggest number is 1, 2, 3, 4}) \\
-&= 1 - P(\text{1st die is 1, 2, 3, 4 and 2nd die is 1, 2, 3, 4}) \\
+&= 1 - P(\text{1st die is 1, 2, 3, 4} \textbf{ and } \text{2nd die is 1, 2, 3, 4}) \\
 &= 1 - \frac{4}{6} \cdot \frac{4}{6}\ \ \text{(by independence)} \\
 &= 1 - \frac{16}{36} \\
 &= \frac{20}{36}
